styling and linking pages

--- a/home-page.html
+++ b/home-page.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-sm-8">
         <h2>Hi, my name is Sky!</h2>
-        <h3>I’m here to reassure you that worry and stress are normal. However, normal worry is different than an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. More than 284 million people around the world are experiencing an anxiety disorder each year, making it the most prevalent mental health illness. If you think you might suffer from anxiety, you are not alone. We will look at some of the symptoms, treatments and further help resources together.</h3>
+        <h3>I’m here to reassure you that worry and stress are normal. However, normal worry is different than an <b>anxiety disorder</b>. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. More than 284 million people around the world are experiencing an anxiety disorder each year, making it the most prevalent mental health illness. If you think you might suffer from anxiety, you <b>are not alone</b>. We will look at some of the <a class="links" href="symptoms.html">symptoms</a>, <a class="links" href="treatment.html">treatments</a> and further help <a class="links" href="resources.html">resources</a> together.</h3>
         <h4>Love, Sky x</h4>
       </div>
     </div>
