subscription added, styling

--- a/resources.html
+++ b/resources.html
@@ -10,6 +10,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="resources-css/resources-styles.css" rel="stylesheet">
 </head>
 <body>
@@ -36,47 +37,40 @@
     <div class="row">
       <div class="col">
         <h1 class="resources">Resources</h1>
-        <p>If you suffer from anxiety, help yoursef.</p>
+        <p>If you suffer from anxiety, help yoursef. Here are some helpful resources:</p>
         <div class="link">
-          <a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS</a>
-          <a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety</a>
+          <ul>
+            <li><a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS</a></li><br>
+            <li><a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety</a></li><br>
+          </div>
+          <div class="text">
+            <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means. Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
+            <p> While we're at it, here are some charities and organisations working with people who suffer from anxiety:</p>
+          </div>
+          <div class="link">
+            <ul>
+              <li><a href="https://www.anxietyuk.org.uk/">Anxiety UK</a></li><br>
+              <li><a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/">Mind UK</a></li><br>
+              <li><a href="https://www.nopanic.org.uk/">No Panic UK</a></li><br>
+              <li><a href="http://anxietycare.org.uk/">Anxiety Care UK</a></li><br>
+            </div>
+            <div class="bye">
+              <p> I wish you good luck with everything and let's definitely keep in touch.<h5>Love, Sky x</h5></p>
+            </div>
+            <form>
+              <div class="form-group">
+                <h4>Subscribe</h4>
+                <label for="exampleInputEmail">Subscribe here to hear from me again</label>
+                <div class="email-input">
+                  <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <div class="wrapper">
+                  <button type="submit" class="btn btn-sample">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-        <div class="text">
-          <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means.Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
-          <p> While we're at it, here are some charities and organisations working with people who suffer from anxiety.</p>
-        </div>
-        <div class="link">
-          <a href="https://www.anxietyuk.org.uk/">Anxiety UK</a>
-          <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/"> Mind UK</a>
-          <a href="https://www.nopanic.org.uk/">No Panic UK</a>
-          <a href="http://anxietycare.org.uk/">Anxiety Care UK</a>
-          <p> I wish you good luck with everything and let's definitely keep in touch. Love, Sky x </p>
-          <!-- <p> Subscribe here to hear from me again ??email-box?? </p> -->
-          <!-- <div class="subscription-form">
-          <form>
-          <h4>Subscribe</h4>
-          <p class="form">Subscribe here to hear from me again<p>
-          <div class="input group">
-          <span class="input-group-label">
-          <i class="fa fa-envelope"></i>
-        </span>
-        <input class="input-group-field" type="email" placeholder="Email" required>
-        <button class="button">Sign up</button>
-      </form>
-    </div>
-  </div> -->
-  <form>
-    <!-- <h4>Subscribe</h4> -->
-    <div class="form-group">
-      <h4>Subscribe</h4>
-      <label for="exampleInputEmail">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
-</div>
-</div>
-</div>
-</body>
-</html>
+      </div>
+    </body>
+    </html>
