--- a/symptoms.html
+++ b/symptoms.html
@@ -59,32 +59,35 @@
       <div class="col">
         <h2>Symptoms</h2>
         <p> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</p>
+</div>
 
-        <div id="piechart"></div>
+<div id="piechart"></div>
 
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-        <script type="text/javascript">
+<script type="text/javascript">
 
-        google.charts.load('current', {'packages':['corechart']});
-        google.charts.setOnLoadCallback(drawChart);
+google.charts.load('current', {'packages':['corechart']});
+google.charts.setOnLoadCallback(drawChart);
 
-        function drawChart() {
-          var data = google.visualization.arrayToDataTable([
-          ['Symptoms', 'Prevalence'],
-          ['Thoughts', 5],
-          ['Feelings', 13],
-          ['Behaviours', 7],
+function drawChart() {
+  var data = google.visualization.arrayToDataTable([
+  ['Symptoms', 'Prevalence'],
+  ['Thoughts', 5],
+  ['Feelings', 13],
+  ['Behaviours', 7],
 
-        ]);
+]);
 
-          var options = {backgroundColor: 'transparent',
-                        'title':'Anxiety Disorders', 'width':550, 'height':400};
+  var options = {backgroundColor: 'transparent',
+                'title':'Anxiety Disorders', 'width':550, 'height':400};
 
-          var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-          chart.draw(data, options);
-        }
-        </script>
+  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+  chart.draw(data, options);
+}
+</script>
+</div>
+
 
   <div class="row">
   <div class="column" style="background-color: #718c83;">
