text add + justify
1

--- a/symptoms.html
+++ b/symptoms.html
@@ -30,7 +30,20 @@
     clear: both;
   }
   </style>
+
+  <style>
+  p {
+  text-indent: 2.0em;
+  }
+  div {
+  text-align: justify;
+  text-justify: inter-word;
+}
+  </style>
+
 </head>
+
+
 
 <body>
   <nav class="navbar my-navbar navbar-expand-lg align-items-end">
@@ -58,7 +71,9 @@
     <div class="row">
       <div class="col">
         <h2>Symptoms</h2>
-        <p> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</p>
+        <p>Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months. Anxiety is intense feelings of being afraid, nervous, tense or worried that are too strong for the situaton, go on too long and get in the way of normal life. There are several types of anxiety disorders. The type of anxiety is related to what the fears and worries are about and how they are handled.</p>
+        <p> Anxiety isn't caused by any one thing, but usually happens because of a combination of things. It can be caused by bad experiences, stress, chronic illness, or chamicals in the brain not working like they should.</p>
+
 </div>
 
 <div id="piechart"></div>
