--- a/treatment.html
+++ b/treatment.html
@@ -52,7 +52,7 @@
           </div>
           <div class="img__description-therapy" data-popup="popup-1">
             <div class="therapy-text">
-              <p class="text">If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
+              <p class="text">If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive Behavioural Therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
           </div>
           <div class="img__description-medication" data-popup="popup-1">
             <div class="therapy-text">
-              <p class="text">Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
+              <p class="text">Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.The antidepressants most widely prescribed for anxiety are SSRIs such as Prozac, Zoloft, Paxil, Lexapro, and Celexa. SSRIs have been used to treat generalized anxiety disorder (GAD), obsessive-compulsive disorder (OCD), panic disorder, social anxiety disorder, and post-traumatic stress disorder. Please be advised that medication shouldn't be the only thing you're offered.</p>
             </div>
           </div>
         </div>
