subscribtion and mascot alignment

--- a/resources.html
+++ b/resources.html
@@ -54,9 +54,11 @@
               <li><a href="https://www.nopanic.org.uk/">No Panic UK</a></li><br>
               <li><a href="http://anxietycare.org.uk/">Anxiety Care UK</a></li><br>
             </div>
-            <div class="bye">
-              <p> I wish you good luck with everything and let's definitely keep in touch.<h5>Love, Sky x</h5></p>
-            </div>
+            <p> I wish you good luck with everything and let's definitely keep in touch.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-8">
             <form>
               <div class="form-group">
                 <h4>Subscribe</h4>
@@ -68,6 +70,12 @@
                   <button type="submit" class="btn btn-sample">Submit</button>
                 </div>
               </form>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div>
+              <img class="img-fluid center-block mascot" src="https://media0.giphy.com/media/xTiTnrfqkKlJypd3yg/giphy.gif?cid=790b76115d092d8d6d4a6974732c784e&rid=giphy.gif">
+              <h5>Love, Sky x</h5>
             </div>
           </div>
         </div>
