links open in a new tab

--- a/resources.html
+++ b/resources.html
@@ -40,8 +40,8 @@
         <p>If you suffer from anxiety, help yoursef. Here are some helpful resources:</p>
         <div class="link">
           <ul>
-            <li><a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS</a></li><br>
-            <li><a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety</a></li><br>
+            <li><a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp" target="_blank">Self-help Guide NHS</a></li><br>
+            <li><a href="https://www.getselfhelp.co.uk/anxiety.htm" target="_blank">CBT for Anxiety</a></li><br>
           </div>
           <div class="text">
             <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means. Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
@@ -49,10 +49,10 @@
           </div>
           <div class="link">
             <ul>
-              <li><a href="https://www.anxietyuk.org.uk/">Anxiety UK</a></li><br>
-              <li><a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/">Mind UK</a></li><br>
-              <li><a href="https://www.nopanic.org.uk/">No Panic UK</a></li><br>
-              <li><a href="http://anxietycare.org.uk/">Anxiety Care UK</a></li><br>
+              <li><a href="https://www.anxietyuk.org.uk/" target="_blank">Anxiety UK</a></li><br>
+              <li><a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/" target="_blank">Mind UK</a></li><br>
+              <li><a href="https://www.nopanic.org.uk/" target="_blank">No Panic UK</a></li><br>
+              <li><a href="http://anxietycare.org.uk/" target="_blank">Anxiety Care UK</a></li><br>
             </div>
             <p> I wish you good luck with everything and let's definitely keep in touch.</p>
           </div>
