--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <nav class="navbar my-navbar navbar-expand-lg align-items-end">
-    <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
+    <a class="navbar-mood-city" href="index.html">MOOD CITY</a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
