--- a/symptoms.html
+++ b/symptoms.html
@@ -89,45 +89,45 @@
     <div class="row">
       <div class="col">
         <h2>Thoughts</h2>
-      </ul>
-      <li>You think that danger is everywhere</li>
-      <li>You think that something is dangerous when it’s not</li>
-      <li>You think that bad things are going to happen</li>
-      <li>You are very critical of yourself</li>
-      <li>Your worrying is out of control</li>
-      <ul>
+        <ul>
+          <li>You think that danger is everywhere</li><br>
+          <li>You think that something is dangerous when it’s not</li><br>
+          <li>You think that bad things are going to happen</li><br>
+          <li>You are very critical of yourself</li><br>
+          <li>Your worrying is out of control</li><br>
+        </ul>
       </div>
       <div class="col">
         <h2>Feelings</h2>
-      </ul>
-      <li>You feel tense most times</li>
-      <li>You feel restless, irritable or angry</li>
-      <li>You find it difficult to focus and concentrate</li>
-      <li>You are hypervigilant to threat cues</li>
-      <li>Your heart is pounding or racing</li>
-      <li>You feel numb</li>
-      <li>You sweat a lot</li>
-      <li>You have an upset stomach</li>
-      <li>You have headaches</li>
-      <li>You are very tired all the time</li>
-      <li>You feel like your throat is closing up</li>
-      <li>You are short of breath</li>
-      <li>You feel dizzy</li>
-    </ul>
+        <ul>
+          <li>You feel tense most times</li><br>
+          <li>You feel restless, irritable or angry</li><br>
+          <li>You find it difficult to focus and concentrate</li><br>
+          <li>You are hypervigilant to threat cues</li><br>
+          <li>Your heart is pounding or racing</li><br>
+          <li>You feel numb</li><br>
+          <li>You sweat a lot</li><br>
+          <li>You have an upset stomach</li><br>
+          <li>You have headaches</li><br>
+          <li>You are very tired all the time</li><br>
+          <li>You feel like your throat is closing up</li><br>
+          <li>You are short of breath</li><br>
+          <li>You feel dizzy</li><br>
+        </ul>
+      </div>
+      <div class="col">
+        <h2>Behaviours</h2>
+        <ul>
+          <li>You avoid situations, people and things</li><br>
+          <li>You cling to people for safety and you find separation very difficult</li><br>
+          <li>You do things over and over again</li><br>
+          <li>You ask for reassurance a lot</li><br>
+          <li>You rely on others to get you through difficult times or you won’t allow people to help you</li><br>
+          <li>You can’t sleep</li><br>
+          <li>You prepare for all that could go wrong</li><br>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div class="col">
-    <h2>Behaviours</h2>
-    <ul>
-      <li>You avoid situations, people and things</li>
-      <li>You cling to people for safety and you find separation very difficult</li>
-      <li>You do things over and over again</li>
-      <li>You ask for reassurance a lot</li>
-      <li>You rely on others to get you through difficult times or you won’t allow people to help you</li>
-      <li>You can’t sleep</li>
-      <li>You prepare for all that could go wrong</li>
-    </ul>
-  </div>
-</div>
-</div>
 </body>
 </html>
