--- a/treatment.html
+++ b/treatment.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="treatment">Treatments</h1>
+        <h1 class="treatment">Treatment</h1>
         <p>Different anxiety disorders have various symptoms. This also means that each type of <b class="red">anxiety disorder</b> has its own treatment plan. It is always best to discuss your concerns with a doctor before you decide on the treatment you want. Remember, self-diagnosis can have tremendous negative consequences on you. When you self-diagnose, you may miss something that you cannot see or you may think that there is more wrong with you than there actually is. Being concerned for your health is normal. Start by seeing your primary care provider to find out if your anxiety could be related to your physical health. If you need to see a mental health specialist, know that the two main treatments for anxiety disorders are <b class="blue">psychotherapy</b> and <b class="yellow">medication</b>. You may benefit most from a combination of the two. Have patience while you discover which treatments work best for you.</p>
         <div>
           <p class="help"><b>Take control of your own mental health</b></p>
