--- a/resources.html
+++ b/resources.html
@@ -42,6 +42,7 @@
           <ul>
             <li><a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp" class="red" target="_blank">Self-help Guide NHS</a></li><br>
             <li><a href="https://www.getselfhelp.co.uk/anxiety.htm" class="blue" target="_blank">CBT for Anxiety</a></li><br>
+          </ul>
           </div>
           <div class="text">
             <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means. Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
@@ -53,6 +54,7 @@
               <li><a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/" class="red" target="_blank">Mind UK</a></li><br>
               <li><a href="https://www.nopanic.org.uk/" class="blue" target="_blank">No Panic UK</a></li><br>
               <li><a href="http://anxietycare.org.uk/" class="yellow" target="_blank">Anxiety Care UK</a></li><br>
+            </ul>
             </div>
             <p> I wish you good luck with everything and let's definitely keep in touch.</p>
           </div>
@@ -62,7 +64,7 @@
             <form>
               <div class="form-group">
                 <h4>Subscribe</h4>
-                <label for="exampleInputEmail">Subscribe here to hear from me again</label>
+                <label for="exampleInputEmail">Enter your email below to hear from me again</label>
                 <div class="email-input">
                   <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
